--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "moment": "^2.25.3",
     "react": "^16.13.1",
     "react-calendar": "^3.1.0",
+    "react-date-picker": "^8.0.1",
+    "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
